# AdventofCode

./: .gitignore  README.md  pyproject.toml
2023/: README.md
2023/1/: README.md  solution.py
2023/2/: README.md  solution.py
2023/3/: README.md  input.txt.age  solution.py
2024/1/: README.md  input.txt.age  solution.py
2024/2/: README.md  input.txt.age  solution.py
2024/3/: README.md  input.txt.age
2024/4/: input.txt.age  solution.py
2024/5/: input.txt.age  solution.py
2024/6/: README.md  solution.py
2024/7/: input.txt.age  solution.py
python/: pyproject.toml
python/2023/1/: README.md  input.txt.age  solution.py
python/2023/2/: input.txt.age
python/2023/3/: solution.py
python/2024/1/: solution.py
python/2024/3/: solution.py
python/2024/4/: README.md
python/2024/5/: README.md
python/2024/6/: input.txt.age
python/2024/7/: README.md  solution.py
python/2025/1/: .gitignore  input.1.txt.age  input.test.txt.age  input.test2.txt.age  pyproject.toml  solution.py
python/2025/2/: input.test.txt.age  input.txt.age  solution.py
python/2025/3/: input.test.txt.age  input.txt.age  solution.py
python/2025/4/: input.test.txt.age  input.txt.age  solution.py
template/: README.md  README.md.jinja  copier.yml  solution.py
