[project]
name = "aoc-python-solutions"
version = "2024.7"
description = ""
authors = [
    {name = "Brian Staszewski", email = "bstaz@users.noreply.github.com"},
]
dependencies = [
    "rich>=13.7.0",
    "rich-click>=1.8.5",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "None"}

